--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
         <div id="qr-container">
             <div id="qrcode"></div>
             <img id="logo" src="logo.png" alt="SKY Gateway Logo">
-        </div>
-        <button id="confirm-btn" onclick="confirmPayment()" style="display:none;">Payment Done?</button>
-    </div>
+        <div>
+    <h3>Verify Your Payment</h3>
+    <input type="text" id="referenceInput" placeholder="Enter Reference Number">
+    <button id="verifyPaymentBtn">Verify Payment</button>
+</div>
+
+
+
 
     <script src="script.js"></script>
 </body>
