--- a/index.html
+++ b/index.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SKY Gateway UPI Payment</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+    <title>SKY Gateway - UPI Payment</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>SKY Gateway UPI Payment</h1>
-        <button onclick="generateQR()">Pay Now</button>
-        <div id="qr-container">
-            <div id="qrcode"></div>
-            <img id="logo" src="logo.png" alt="SKY Gateway Logo">
-        <div>
-    <h3>Verify Your Payment</h3>
-    <input type="text" id="referenceInput" placeholder="Enter Reference Number">
-    <button id="verifyPaymentBtn">Verify Payment</button>
-</div>
 
+    <h1>SKY Gateway - UPI Payment</h1>
 
+    <div>
+        <label for="amount">Enter Amount (₹):</label>
+        <input type="number" id="amount" min="1" max="1000" required>
+        <button id="generateQRBtn">Pay Now</button>
+    </div>
 
+    <div id="qrContainer">
+        <h3>Scan to Pay</h3>
+        <img id="qrCode" src="" alt="QR Code">
+    </div>
+
+    <div>
+        <h3>Verify Your Payment</h3>
+        <input type="text" id="referenceInput" placeholder="Enter Reference Number">
+        <button id="verifyPaymentBtn">Verify Payment</button>
+    </div>
 
     <script src="script.js"></script>
+
 </body>
 </html>
