--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <h1>SKY Gateway - UPI Payment</h1>
 
     <div>
-        <label for="amount">Enter Amount (₹):</label>
-        <input type="number" id="amount" min="1" max="1000" required>
+        <label for="amount">Amount (₹):</label>
+        
         <button id="generateQRBtn">Pay Now</button>
     </div>
 
